--- a/styles/index.css
+++ b/styles/index.css
@@ -241,7 +241,7 @@ main {
 
     .quote-section {
       .quote {
-        color: #c0c0c0;
+        color: yellowgreen;
         font-size: 2em;
       }
     }
