--- a/styles/index.css
+++ b/styles/index.css
@@ -73,13 +73,17 @@ main {
       line-height: 2em;
       font-size: 2em;
       color: yellowgreen;
+
+      span {
+        color: whitesmoke;
+      }
     }
   }
   /* ----about me section*/
   #about-me-section {
     width: 60%;
     height: 100%;
-    color: #e1e1e1;
+    color: whitesmoke;
 
     h1 {
       margin-top: 2em;
@@ -106,9 +110,10 @@ main {
     }
 
     .signup-button {
-      font-size: 1em;
+      font-size: 0.8em;
+      padding: 0.7em;
       background-color: rgb(73, 99, 21);
-      color: black;
+      color: whitesmoke;
       border-radius: 0.5em;
       cursor: pointer;
     }
@@ -141,7 +146,7 @@ main {
 
     .back-to-top a {
       font-size: 1em;
-      color: #000000;
+      color: whitesmoke;
       text-decoration: none;
       padding: 1em 5em;
       transition: color 0.3s;
@@ -202,7 +207,7 @@ main {
       margin: 0;
 
       .quote {
-        color: #c0c0c0;
+        /* color: whitesmoke; */
       }
     }
 
@@ -241,7 +246,7 @@ main {
 
     .quote-section {
       .quote {
-        color: yellowgreen;
+        /* color: whitesmoke; */
         font-size: 2em;
       }
     }
