--- a/styles/alt-courses.css
+++ b/styles/alt-courses.css
@@ -19,11 +19,12 @@ html {
 /* header navigation */
 header {
   background-color: rgb(0, 0, 0);
+  position: fixed;
   top: 0;
   left: 0;
-  position: fixed;
   z-index: 100;
-  width: 100%;
+  width: 100vw;
+  padding: 0.3em 0;
 
   .head-nav {
     width: 100%;
@@ -42,7 +43,7 @@ header {
       color: yellowgreen;
       font-size: 1.4em;
       border-radius: 4em;
-      padding: 0.5em 1em;
+      padding: 0.2em 0.7em;
     }
 
     nav ul li a:hover {
@@ -56,99 +57,141 @@ header {
 main {
   .major {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 6em 0;
-
-    .h1-image-container {
-      padding: 2em;
-      width: 100%;
-
-      h1 {
-        color: yellowgreen;
-        font-size: 1.5em;
-        text-align: center;
-        margin-bottom: 2em;
-      }
-      .img-contain {
-        display: flex;
-        justify-content: center;
-
-        img {
-          display: block;
-          margin: 0 auto;
-          width: 100%;
-        }
-      }
-    }
+    width: 100vw;
+    height: 100vh;
 
     .side-note {
       text-align: center;
-      padding: 2em;
       width: 100%;
-      height: 100%;
+      padding: 0 1em;
+
+      h1 {
+        color: yellowgreen;
+        font-size: 3em;
+        text-align: center;
+        margin-bottom: 1em;
+      }
 
       h4 {
         text-decoration: underline;
         color: yellowgreen;
-        font-size: 1.1em;
-        padding-bottom: 2em;
+        font-size: 1.6em;
+        padding-bottom: 0.5em;
       }
 
       p {
         color: whitesmoke;
-        /* line-height: 3em; */
         font-size: 1.3em;
+        line-height: 2em;
       }
     }
   }
 
-  table {
-    background-color: rgb(214, 210, 210);
-    color: rgb(0, 0, 3);
-    border-collapse: collapse;
-    width: 100%;
-    caption,
-    th,
-    td {
-      /* background-color: green; */
-      padding: 1rem;
-    }
-    caption,
-    th {
-      text-align: left;
-      /* color: whitesmoke; */
-    }
+  .table-container {
+    background-color: rgb(114, 115, 116);
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 7em;
+
     caption {
-      background-color: rgb(157, 156, 156);
-      color: whitesmoke;
-      text-transform: uppercase;
+      color: rgb(237, 237, 236);
+      padding: 0.3em 0;
+      font-size: 1.5em;
     }
-    .sch {
-      background-color: rgb(195, 193, 193);
+
+    table {
+      background-color: rgb(194, 194, 194);
+
+      thead {
+        background-color: rgb(165, 166, 163);
+        padding: 0.5em 0;
+      }
+
+      tbody {
+        /* background-color: pink; */
+
+        .engine {
+          background-color: rgb(1, 1, 114);
+          color: whitesmoke;
+          padding-left: 1em;
+        }
+        td {
+          background-color: rgb(1, 1, 114);
+          color: whitesmoke;
+          padding: 1em;
+        }
+      }
     }
   }
 }
 
 /* footer */
 footer {
-  /* background-color: blue; */
+  background-color: #000000;
   color: whitesmoke;
-  display: flex;
-  justify-content: end;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: left;
   font-size: 0.7em;
-  span {
-    padding: 2em 2em;
-  }
+  padding: 1em 1em;
+
 }
 
 /* --------------------------------media query  for tablet*/
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 430px) {
+  header {
+    padding: 0.5em;
+    .head-nav {
+      nav ul {
+        display: flex;
+        justify-content: center;
+
+        li a {
+          padding: 0.3em 0.7em;
+        }
+      }
+    }
+  }
+
   .major {
     display: flex;
     flex-direction: column;
+
+    h4 {
+      display: none;
+    }
+
+    p {
+      display: none;
+    }
   }
+
+  /* .table-container {
+
+    th {
+
+    }
+  } */
 }
 
 /* --------------------------------media query  for laptop*/
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 430px) and (max-width: 768px) {
+  header {
+    padding: 0.5em;
+    .head-nav {
+      nav ul {
+        display: flex;
+        justify-content: center;
+
+        li a {
+          padding: 0.3em 0.7em;
+        }
+      }
+    }
+  }
 }
