--- a/styles/alt-form.css
+++ b/styles/alt-form.css
@@ -3,7 +3,8 @@
 /* general style */
 html {
   font-size: 1rem;
-  font-family: Merienda, Monaco, "Courier New", monospace;
+  font-family: Merienda, "Courier New", monospace;
+  font-weight: 500;
 
   * {
     padding: 0;
@@ -34,12 +35,13 @@ header {
 
     nav ul li a {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       text-decoration: none;
       color: yellowgreen;
-      font-size: 1em;
-      border-radius: 2em;
-      padding: 0.3em 1.2em;
+      font-size: 1.3em;
+      border-radius: 2px;
+      padding: 0.5em 1em;
+      margin: 0.5em;
     }
 
     nav ul li a:hover {
@@ -53,16 +55,30 @@ header {
 /* --------------------------------main container */
 main {
   padding: 3rem 0.8rem;
+  padding-bottom: 6em;
+
   .image-section {
     display: none;
   }
 
   .sign-up-section {
+    padding-top: 3em;
+    display: flex;
+    flex-direction: column;
+
+    .alt-logo {
+      display: flex;
+      justify-content: center;
+
+      img {
+        width: 20%;
+      }
+    }
+
     .section-p {
-      font-size: 0.8em;
-      text-align: center;
+      font-size: 1em;
       font-weight: bold;
-      padding: 3em 0;
+      padding: 2em 0;
 
       a {
         text-decoration: none;
@@ -72,27 +88,30 @@ main {
 
     .form-container {
       h1 {
-        font-size: 1.4em;
+        font-size: 2em;
       }
 
       h4 {
-        font-size: 0.8em;
+        font-size: 1em;
         word-spacing: 0.2em;
         padding: 1.2em 0;
         color: gray;
       }
 
       form {
-        display: grid;
+        display: flex;
+        flex-direction: column;
 
         .name-container {
           .twins {
-            display: grid;
-            grid-row: 2;
+            display: flex;
+            flex-direction: column;
             padding: 1em 0 0;
 
             label {
               padding-bottom: 0.5em;
+              font-size: 1em;
+              color: black;
             }
             input {
               background-color: rgb(245, 242, 242);
@@ -135,7 +154,7 @@ main {
               position: absolute;
               right: 20px;
               z-index: 1000;
-              color: rgb(164, 158, 158);
+              color: rgb(156, 154, 154);
               font-size: 0.8em;
             }
           }
@@ -156,19 +175,10 @@ main {
             width: 100%;
             font-size: 0.7em;
             padding: 1.5em 0;
-            /* margin-top: 1em; */
             background-color: #6666ed;
             color: whitesmoke;
             border-radius: 6px;
             position: relative;
-          }
-          span {
-            color: rgb(250, 247, 247);
-            font-size: 1.6em;
-            position: absolute;
-            right: 190px;
-            z-index: 99;
-            /* color: red; */
           }
         }
       }
@@ -176,20 +186,146 @@ main {
   }
 }
 
-/* -------------------------------madia query */
-@media screen and (min-width: 600px) and (max-width: 900px) {
-  .name-container {
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr); */
-    display: flex;
-    gap: 20px;
+footer {
+  /* background-color: #000000;
+  color: whitesmoke;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: left;
+  font-size: 0.7em;
+  padding: 1em 1em; */
+}
 
-    .twins {
-      width: 100%;
+/* -------------------------------madia query */
+/* tablet */
+@media screen and (max-width: 430px) and (min-width: 768) {
+  .sign-up-section {
+    .alt-logo {
+      display: flex;
+      justify-content: center;
+
+      img {
+        width: 20%;
+      }
     }
 
-    .password-view {
-      span {
+    .section-p {
+      text-align: center;
+    }
+  }
+}
+
+/* laptop */
+@media screen and (min-width: 1024px) {
+  header {
+    .head-nav {
+      nav ul li a {
+        margin: 0.2em;
+        /* padding: 0.2em; */
+      }
+    }
+  }
+
+  main {
+    display: flex;
+
+    .image-section {
+      width: 45%;
+      height: 100vh;
+      background-color: #f5f5f5;
+      display: block;
+      display: flex;
+      flex-direction: column;
+      position: fixed;
+      left: 0;
+      padding-top: 2em;
+
+      .content-box {
+        padding: 0 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 70%;
+        }
+
+        h3 {
+          font-size: 2.2em;
+          text-align: center;
+          font-weight: 900;
+          padding: 0 2em;
+          padding-bottom: 1em;
+        }
+      }
+
+      .icons {
+        display: flex;
+        justify-content: center;
+        gap: 0.7em;
+        padding-bottom: 0.5em;
+
+        img {
+          width: 0.8em;
+        }
+      }
+
+      footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        a {
+          font-size: 0.7em;
+          padding-bottom: 0.5em;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .sign-up-section {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 55%;
+      padding: 3em 2em;
+      display: flex;
+
+      .alt-logo {
+        display: none;
+      }
+
+      .section-p {
+        text-align: right;
+        font-size: 1em;
+        padding: em 0;
+        margin-top: 0.7em;
+      }
+
+      .form-container {
+        padding-left: 2em;
+
+        form {
+          padding-right: 4em;
+
+          .name-container {
+            display: flex;
+            gap: 1.5em;
+
+            .twins {
+              width: 100%;
+
+              .password-view {
+                span {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
