--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,8 @@
 /* general style */
 html {
   font-size: 1rem;
-  font-family: Merienda, Monaco, "Courier New", monospace;
+  font-family: lotion, "Courier New", monospace;
+  font-weight: 400;
 
   * {
     padding: 0;
@@ -13,7 +14,7 @@ html {
   }
 
   body {
-    background-color: black;
+    background-color: rgb(34, 34, 34);
   }
 }
 
@@ -103,6 +104,7 @@ main {
     .ul-li {
       list-style: circle;
       padding-left: 2em;
+      line-height: 2em;
     }
 
     span {
@@ -113,13 +115,14 @@ main {
       font-size: 0.8em;
       padding: 0.7em;
       background-color: rgb(73, 99, 21);
-      color: whitesmoke;
+      color: rgb(194, 194, 194);
       border-radius: 0.5em;
       cursor: pointer;
     }
 
     .signup-button:hover {
       background-color: yellowgreen;
+      color: black;
     }
 
     .back-to-top ul {
@@ -141,12 +144,13 @@ main {
 
     .back-to-top .button:hover {
       background-color: yellowgreen;
+      color: rgb(0, 0, 0);
       cursor: pointer;
     }
 
     .back-to-top a {
       font-size: 1em;
-      color: whitesmoke;
+      color: rgb(197, 197, 197);
       text-decoration: none;
       padding: 1em 5em;
       transition: color 0.3s;
@@ -173,7 +177,7 @@ main {
     background-color: black;
 
     .head-nav {
-      margin-top: 0.5em;
+      margin: 0.5em 0;
       display: flex;
       justify-content: center;
       width: 100%;
@@ -188,9 +192,6 @@ main {
         padding: 0.5em 1em;
       }
 
-      a:hover {
-        background-color: yellowgreen;
-      }
     }
   }
   main {
@@ -206,9 +207,7 @@ main {
       height: 100vh;
       margin: 0;
 
-      .quote {
-        /* color: whitesmoke; */
-      }
+  
     }
 
     #about-me-section {
@@ -228,7 +227,13 @@ main {
     padding: 0;
 
     .head-nav {
-      margin-top: 0.5em;
+      margin: 0.5em 0;
+
+      .back-to-top .button:hover {
+        background-color: yellowgreen;
+        color: black;
+        cursor: pointer;
+      }
 
       a {
         display: flex;
