--- a/styles/media.css
+++ b/styles/media.css
@@ -24,6 +24,7 @@ header {
   position: fixed; */
   z-index: 100;
   width: 100%;
+  padding: 0.5em;
 
   .head-nav {
     width: 100%;
@@ -160,6 +161,7 @@ main {
 /* footer */
 footer {
   background-color: #000000;
+  color: whitesmoke;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -231,15 +233,12 @@ footer {
     }
 
     .media-iframe {
-      background-color: #0000ff;
       height: 20rem;
-      /* width: 20em; */
 
       margin-bottom: 5em;
 
       iframe {
         height: 80%;
-        /* width: 20em; */
       }
     }
   }
