--- a/styles/alt-courses.css
+++ b/styles/alt-courses.css
@@ -100,6 +100,7 @@ main {
       color: rgb(237, 237, 236);
       padding: 0.3em 0;
       font-size: 1.5em;
+      width: 100%;
     }
 
     table {
@@ -109,21 +110,20 @@ main {
         background-color: rgb(165, 166, 163);
         padding: 0.5em 0;
         font-size: 2em;
+        width: 100%;
       }
 
       tbody {
-        /* background-color: pink; */
-
         .engine {
           background-color: rgb(1, 1, 114);
           color: rgb(255, 255, 255);
-          padding-left: 1em;
-          font-size: 1.7em;
+          padding-left: 0.5em;
+          font-size: 1.5em;
         }
         td {
           background-color: rgb(1, 1, 114);
           color: rgb(255, 255, 255);
-          padding: 1em;
+          padding: 1em 0.5em;
           font-size: 1.2em;
         }
       }
@@ -142,7 +142,6 @@ footer {
   text-align: left;
   font-size: 0.7em;
   padding: 1em 1em;
-
 }
 
 /* --------------------------------media query  for tablet*/
