--- a/styles/alt-courses.css
+++ b/styles/alt-courses.css
@@ -4,9 +4,11 @@
 html {
   font-size: 1rem;
   font-family: Merienda, Monaco, "Courier New", monospace;
+  height: webkit-fill-available;
 
   body {
     background-color: rgb(1, 1, 114);
+    height: webkit-fill-available;
   }
 
   * {
