--- a/styles/alt-form.css
+++ b/styles/alt-form.css
@@ -5,6 +5,11 @@ html {
   font-size: 1rem;
   font-family: Merienda, "Courier New", monospace;
   font-weight: 500;
+  height: webkit-fill-available;
+
+  body {
+    height: webkit-fill-available;
+  }
 
   * {
     padding: 0;
@@ -304,7 +309,7 @@ main {
       .section-p {
         text-align: right;
         font-size: 1em;
-        padding: em 0;
+        /* padding: 0 0; */
         margin-top: 0.7em;
       }
 
