--- a/styles/media.css
+++ b/styles/media.css
@@ -4,15 +4,17 @@
 html {
   font-size: 1rem;
   font-family: Merienda, Monaco, "Courier New", monospace;
+  height: webkit-fill-available;
+
+  body {
+    background-color: black;
+    height: webkit-fill-available;
+  }
 
   * {
     margin: 0;
     border: 0;
     box-sizing: border-box;
-  }
-
-  body {
-    background-color: black;
   }
 }
 
